3re commit- Se realizo un cambio en titulo index.html

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
     <title>Primer Despliegue</title>
 </head>
 <body>
-    <h1>Hola Informatorio</h1>
+    <h1>🚀🚀🚀¡Hola Informatorio !🚀🚀</h1>
 </body>
 </html>
